feat: static css file added && templates created extending base.html

--- a/templates/docs/page_details.html
+++ b/templates/docs/page_details.html
@@ -1,11 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Page details</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Page {{ page.title }}-{{space.name}} - Doc9b{% endblock title %}
+
+{% block content %}
+    <!-- breadcrumbs nav-menu -->
+    <nav>
+        <a href="{% url 'docs:space_details' space.slug%}">{{ space.name }}</a>
+        {% for breadcrumb in breadcrumbs %}
+            <span>›</span>
+            <a href="{% url 'docs:page_details' space.slug breadcrumb.slug %}">
+                {% if page.title == breadcrumb.title %}
+                    <b>{{ breadcrumb.title }}</b>
+                {% else %}
+                    {{ breadcrumb.title }}
+                {% endif %}
+            </a>
+        {% endfor %}
+    </nav>
+
+    <section class="content_card">
+        <article class="content_section_title">
+            <h2>{{page.title}}</h2>
+            <div>
+                <p class="timestamp">{{ page.created_at|date:"d/m/Y H:i" }}</p>
+                <p class="timestamp">{{ page.updated_at|date:"d/m/Y H:i" }}</p>
+            </div>
+        </article>
+
+        <article class="content_section_content">
+            <!-- parent page -->
+            {% if page.parent %}
+            <ul class="flex_row">
+                <p>Page parente:</p>
+                    <li>
+                        <a href="{% url 'docs:page_details' space.slug page.parent.slug %}" class="parent_link_btn">
+                            {{ page.parent.title }}
+                        </a>
+                    </li>
+            </ul>
+            {% else %}
+                <p class="comment">Cette page n'a pas de page-parente</p>
+            {% endif %}
+            
+            <p>{{ page.content }}</p>
+            
+            <!-- children pages -->
+            {% if children %}
+            <ul class="flex_row">
+                <p>Pages enfants:</p>
+                {% for child in children %}
+                    <li>
+                        <a href="{% url 'docs:page_details' space.slug child.slug%}" class="child_link_btn">{{child.title}}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <p class="comment">Cette page n'a pas de pages-enfants</p>
+            {% endif %}
+        </article>
+    </section>
+{% endblock content %}
