--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doc9b</title>
+    <title>{% block title %}Doc9b{% endblock title %}</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    
+    <header>
+        <h1 class="home_link">
+            <a href="{% url 'docs:space_list' %}" class="undecorated_link">Doc9b</a>
+        </h1>
+    </header>
+    <main>
+        {% block content %}
+        {% endblock content %}
+    </main>
+    <footer>
+        Doc9b - 2025
+    </footer>
 </body>
 </html>
