fix: minor ui updates && readme added

--- a/templates/docs/page_details.html
+++ b/templates/docs/page_details.html
@@ -22,8 +22,8 @@
         <article class="content_section_title">
             <h2>{{page.title}}</h2>
             <div>
-                <p class="timestamp">{{ page.created_at|date:"d/m/Y H:i" }}</p>
-                <p class="timestamp">{{ page.updated_at|date:"d/m/Y H:i" }}</p>
+                <p class="timestamp">Crée le: {{ page.created_at|date:"d/m/Y H:i" }}</p>
+                <p class="timestamp">Modifié le: {{ page.updated_at|date:"d/m/Y H:i" }}</p>
             </div>
         </article>
 
